Adding new reference to teegi from Motherboard website

--- a/teegi-tangible-eeg-interface/index.html
+++ b/teegi-tangible-eeg-interface/index.html
@@ -155,8 +155,9 @@
 <h3 id="related-publications">Related publications</h3>
 <ul>
   <li><span id="Frey2014">Frey, Jérémy, Renaud Gervais, Stéphanie Fleck, Fabien Lotte, and Martin Hachet. “Teegi: Tangible EEG Interface.” In <i>Proceedings of The 27th Annual ACM Symposium on User Interface Software And Technology</i>. UIST ’14. ACM, 2014.</span> <a href="/papers/Frey2014.pdf"><img src="/images/pdf.png" /></a></li>
-  <li><a href="http://gizmodo.com/7-experimental-interfaces-that-show-the-future-of-ui-de-1642890943">Gizmodo</a>: Teegi has been highlighted as an interface that shows the future of UI design</li>
   <li><a href="http://renaudgervais.github.io/UIST2014-teegi-presentation/">Slides</a> of the talk that <a href="http://phd.jfrey.info/">Jeremy</a> and I gave at UIST 2014</li>
+  <li><a href="http://gizmodo.com/7-experimental-interfaces-that-show-the-future-of-ui-de-1642890943">Gizmodo</a>: Teegi has been highlighted as an interface that shows the future of UI design</li>
+  <li><a href="http://motherboard.vice.com/read/brain-waves-doll">Motherboard</a>: A great summary of the Teegi project</li>
 </ul>
 
       <hr />
