--- a/publications/index.html
+++ b/publications/index.html
@@ -139,7 +139,13 @@
   <article>
     <h1>Publications</h1>
     <div class="article-wrap">
-      <h2 id="section">2014</h2>
+      <h2 id="section">2015</h2>
+
+<ol class="bibliography"><li><span id="Gervais2015">Gervais, Renaud, Jérémy Frey, and Martin Hachet. “Pointing in Spatial Augmented Reality from 2D Pointing Devices.” In <i>INTERACT</i>, 8. Bamberg, Germany, 2015. https://hal.archives-ouvertes.fr/hal-01153647.</span>
+
+</li></ol>
+
+<h2 id="section-1">2014</h2>
 
 <ol class="bibliography"><li><span id="Frey2014">Frey, Jérémy, Renaud Gervais, Stéphanie Fleck, Fabien Lotte, and Martin Hachet. “Teegi: Tangible EEG Interface.” In <i>Proceedings of The 27th Annual ACM Symposium on User Interface Software And Technology</i>. UIST ’14. ACM, 2014.</span>
 
@@ -159,7 +165,7 @@
 
 <div class="footer-wrap">
   <footer>
-    <span>&copy; 2014 Renaud Gervais. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
+    <span>&copy; 2015 Renaud Gervais. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/minimal-mistakes/">Minimal Mistakes</a> theme.</span>
 
   </footer>
 </div><!-- /.footer-wrap -->
