Adding pdf of cursar

--- a/publications/index.html
+++ b/publications/index.html
@@ -143,19 +143,21 @@
 
 <ol class="bibliography"><li><span id="Gervais2015">Gervais, Renaud, Jérémy Frey, and Martin Hachet. “Pointing in Spatial Augmented Reality from 2D Pointing Devices.” In <i>INTERACT</i>, 8. Bamberg, Germany, 2015. https://hal.archives-ouvertes.fr/hal-01153647.</span>
 
+
+<a href="/./papers/Gervais2015.pdf"><img src="/images/pdf.png" style="width: 16px; height: 16px;" /></a>
 </li></ol>
 
 <h2 id="section-1">2014</h2>
 
-<ol class="bibliography"><li><span id="Frey2014">Frey, Jérémy, Renaud Gervais, Stéphanie Fleck, Fabien Lotte, and Martin Hachet. “Teegi: Tangible EEG Interface.” In <i>Proceedings of The 27th Annual ACM Symposium on User Interface Software And Technology</i>. UIST ’14. ACM, 2014.</span>
+<ol class="bibliography"><li><span id="Gervais2014">Gervais, Renaud, Jérémy Laviole, and Asier Marzo. “The Good, The Bad And The Hacked: Creative Coding on Objects.” In <i>Proceedings of The 8th International Conference on Tangible, Embedded And Embodied Interaction WiP Poster</i>. TEI ’14. ACM, 2014.</span>
 
 
-<a href="/./papers/Frey2014.pdf"><img src="/images/pdf.png" /></a>
+<a href="/./papers/Gervais2014.pdf"><img src="/images/pdf.png" style="width: 16px; height: 16px;" /></a>
 </li>
-<li><span id="Gervais2014">Gervais, Renaud, Jérémy Laviole, and Asier Marzo. “The Good, The Bad And The Hacked: Creative Coding on Objects.” In <i>Proceedings of The 8th International Conference on Tangible, Embedded And Embodied Interaction WiP Poster</i>. TEI ’14. ACM, 2014.</span>
+<li><span id="Frey2014">Frey, Jérémy, Renaud Gervais, Stéphanie Fleck, Fabien Lotte, and Martin Hachet. “Teegi: Tangible EEG Interface.” In <i>Proceedings of The 27th Annual ACM Symposium on User Interface Software And Technology</i>. UIST ’14. ACM, 2014.</span>
 
 
-<a href="/./papers/Gervais2014.pdf"><img src="/images/pdf.png" /></a>
+<a href="/./papers/Frey2014.pdf"><img src="/images/pdf.png" style="width: 16px; height: 16px;" /></a>
 </li></ol>
 
     </div><!-- /.article-wrap -->
