--- a/thesis-abstract/index.html
+++ b/thesis-abstract/index.html
@@ -137,7 +137,7 @@
     <h1>Getting Out of Flatland: Interaction and Introspection with Tangible Augmented Objects</h1>
     <div class="article-wrap">
       <!-- ### Motivation: Why do we care about the problem and the results? -->
-<p>Most of our waking hours are now spent staring at a screen. While the advances in touch screens has enabled the use of more expressiveness by using our fingers to interact with digital content, what we see and manipulate on screen is still an emulation of real-world metaphors. The range of capabilities of the human senses are much richer that what screens can currently offer. In order to be sustainable in the future, interaction with the digital world should leverage these human capabilities instead of letting them atrophy. One way to provide richer interaction modalities is to rely on the physical world itself as an host for digital content. Spatial Augmented Reality (SAR) provides a technical mean towards this idea by using projectors to shed digitally controlled light onto real-world objects to augment them and their environment with functionalities and content. This leads the way to smart objects that will have very rich possibilities while still be anchored in the real-world.</p>
+<p>Most of our waking hours are now spent staring at a screen. While the advances in touch screens has enabled the use of more expressiveness by using our fingers to interact with digital content, what we see and manipulate on screen is still an emulation of real-world metaphors. The range of capabilities of the human senses are much richer that what screens can currently offer. In order to be sustainable in the future, interaction with the digital world should leverage these human capabilities instead of letting them atrophy. One way to provide richer interaction and visualization modalities is to rely on the physical world itself as an host for digital content. Spatial Augmented Reality (SAR) provides a technical mean towards this idea by using projectors to shed digitally controlled light onto real-world objects to augment them and their environment with functionalities and content. This leads the way to smart objects that will have very rich possibilities while still be anchored in the real-world.</p>
 
 <!-- ### Problem statement: What problem are your trying to solve? -->
 <p>However, making the real and digital cohabit on a physical medium makes it difficult to interact with the digital content. Direct touch can be a solution most of the time. However, touch is still plagued by the “fat finger” problem and is not appropriate for complex geometries or when precision is required. This thesis is interested in two main questions: <em>How can we interact with projected content when hosted on tangible objects?</em> and <em>How can augmented physical objects be used to increase our awareness of our own human capabilities and senses, i.e. our own body?</em></p>
@@ -171,6 +171,24 @@
 <p>TOBE stands for Tangible Out of Body Experience. It is a direct follow-up of the Teegi project that is interested in increasing the freedom of the users regarding two factors: the physiological readings and the visual representations of said readings. The main idea of this platform is to allow users to build a tangible augmented avatar that will react to their own body’s internal state. Compared to Teegi, users have access to a greater range of physiological sensors such as ECG, breathing, GSR and some interpreted EEG signals. Moreover, they are creating the visual mapping themselves by selecting a visual representation, creating an animation using a simplified touch interface and linking it to one of their real-time physiological readings.</p>
 
 <p>By letting users create their own representations of their real-time inner state through a tangible avatar, we are interested to see if users are more involved with their own physiology. Additionally, it can serve as a mediation facilitator, letting novice users explore what can be measured on the body, the way it is measured and how they relate to these measurements.</p>
+
+<h2 id="publications">Publications</h2>
+
+<ol class="bibliography"><li><span id="Gervais2015">Gervais, Renaud, Jérémy Frey, and Martin Hachet. “Pointing in Spatial Augmented Reality from 2D Pointing Devices.” In <i>INTERACT</i>, 8. Bamberg, Germany, 2015. https://hal.archives-ouvertes.fr/hal-01153647.</span>
+
+
+<a href="/./papers/Gervais2015.pdf"><img src="/images/pdf.png" style="width: 16px; height: 16px;" /></a>
+</li>
+<li><span id="Gervais2014">Gervais, Renaud, Jérémy Laviole, and Asier Marzo. “The Good, The Bad And The Hacked: Creative Coding on Objects.” In <i>Proceedings of The 8th International Conference on Tangible, Embedded And Embodied Interaction WiP Poster</i>. TEI ’14. ACM, 2014.</span>
+
+
+<a href="/./papers/Gervais2014.pdf"><img src="/images/pdf.png" style="width: 16px; height: 16px;" /></a>
+</li>
+<li><span id="Frey2014">Frey, Jérémy, Renaud Gervais, Stéphanie Fleck, Fabien Lotte, and Martin Hachet. “Teegi: Tangible EEG Interface.” In <i>Proceedings of The 27th Annual ACM Symposium on User Interface Software And Technology</i>. UIST ’14. ACM, 2014.</span>
+
+
+<a href="/./papers/Frey2014.pdf"><img src="/images/pdf.png" style="width: 16px; height: 16px;" /></a>
+</li></ol>
 
     </div><!-- /.article-wrap -->
     
